# laconic

./: .gitignore  Cargo.toml  README.md  laconic.md
analysis/: laconic.txt
scripts/: average.lac  base10to2.lac  base16to10.lac  bubbleSort.lac  clearStack.lac  dowName.lac  factorials.lac  interactive.lac  isPrime.lac  lineDeviation.lac  multiply_rep.lac  primeRoutine.lac  printPrimes.lac  readme.txt  recursion_test.lac  revertChars.lac  root.lac  testGreg.lac  testGregRoundTrip.lac  unicodePage.lac  unitTestUtils.lac  write_fibonacci.lac
src/: lib.rs  main.rs
